Fixed css vars, breadcrumbs root link, price alignment, recoded popup
1. Fixed css vars,
2. Added select with 3 oprtions for Breadcrumbs root link, 3. Aligmed price and duration
4. Recoded Modal window on Product page

--- a/assets/base.css
+++ b/assets/base.css
@@ -13,22 +13,9 @@
   --grid-auto-flow: dense;
 
   /* Colors */
-  --color-primary-foreground-rgb: #0B1A2600; /* alpha: 0 */
-  --color-primary-foreground-rgb-10: #0B1A261A; /* alpha: 0.1 */
-  --color-primary-foreground-rgb-45: #0B1A2673; /* alpha: 0.45 */
-  --color-primary-foreground-rgb-80: #0B1A26CC; /* alpha: 0.8 */
-  --color-primary-background-rgb: 255, 255, 255;
-  --color-primary-background-rgb-20: #FFFFFF33; /* alpha: 0.2 */
-  --color-primary-background-rgb-60: #FFFFFF99; /* alpha: 0.6 */
-  --color-primary-background-hover: #FFFFFF52; /* alpha: 0.32 */
-  --color-primary-background-active: #FFFFFF8F; /* alpha: 0.56 */
-  --color-accent-background-rgb: #F4B84100; /* alpha: 0 */
   --color-green: #51C234;
   --color-red: #C23434;
-  --color-black: #0B1A26;
-  --color-gray: #868686;
   --color-white: #ffffff;
-  --color-white-rgb: 255, 255, 255;
 
   /* Font weights */
   --font-weight-light: 300;
@@ -136,7 +123,7 @@ body .growth > section:first-child{
 }
 
 .header--sticky ~ #main {
-  padding-top: calc(var(--header-height) - 1px);
+  padding-top: calc(var(--header-height) - 2px);
 }
 
 h1,
