--- a/assets/form.css
+++ b/assets/form.css
@@ -38,10 +38,10 @@
 .form__textarea {
   display: block;
   width: 100%;
-  color: var(--color-gray, #868686);
+  color: var(--color-border-secondary, #868686);
   padding: 14px 12px;
   font-size: inherit;
-  background: var(--color-white, #FFFFFF);
+  background: var(--color-primary-background, #FFFFFF);
   border: 1px solid var(--color-third-foreground, #B2B4B8);
   margin-bottom: 22px;
 }
@@ -54,7 +54,7 @@
 
 .form__field::placeholder,
 .form__textarea::placeholder {
-  color: var(--color-gray, #868686);
+  color: var(--color-border-secondary, #868686);
 }
 
 .form__field:focus,
@@ -104,7 +104,7 @@
   content:'';
   appearance: none;
   border: 1px solid var(--color-third-foreground, #B2B4B8);
-  background: var(--color-white, #FFFFFF);
+  background: var(--color-primary-background, #FFFFFF);
   padding: 9px;
   display: inline-block;
   position: relative;
@@ -121,7 +121,7 @@
   left: 7px;
   width: 6px;
   height: 12px;
-  border: solid var(--color-black, #0B1A26);
+  border: solid var(--color-primary-foreground, #0B1A26);
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
