--- a/assets/hero.css
+++ b/assets/hero.css
@@ -1,10 +1,7 @@
-.hero {
-  color: var(--color-third-foreground, #B2B4B8);
-  border-bottom: 1px solid var(--color-primary-background-rgb-20, #FFFFFF33);
-}
-
 .hero__wrapper {
   height: 100%;
+  color: var(--color-third-foreground, #B2B4B8);
+  background: var(--color-primary-foreground, #0B1A26);
   position: relative;
   flex-grow: 1;
 }
@@ -38,7 +35,7 @@
 }
 
 .hero__title {
-  color: var(--color-white, #FFFFFF);
+  color: var(--color-primary-background, #FFFFFF);
   font-size: var(--font-size-h3);
 }
 
@@ -58,7 +55,7 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
 }
 
 .hero__vision-wrapper {
